Fix z-index of the dark-overlay

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -46,7 +46,7 @@ body {
   bottom: 0;
   background: #000;
   opacity: 0.8;
-  z-index: 1;
+  z-index: 2;
   transition: 0.2s ease;
 
   &.active {
@@ -758,14 +758,6 @@ hr {
 
       @media screen and (max-width: 576px) {
         font-size: 4vw;
-      }
-
-      &::after {
-        // top: -7px;
-        // bottom: -7px;
-        // left: -7px;
-        // right: -7px;
-        // border-width: 2px;
       }
     }
 
